# levenshtein-automata

algorithm/: .gitignore  Cargo.toml
algorithm/src/: automata.rs  dictionary.rs  edit_graph.rs  graph.rs  lib.rs  main.rs  position.rs  state.rs  text_stream_writer.rs  trie.rs  walker.rs
algorithm/tests/: edit_graph_tests.rs  walker_tests.rs
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: automation-graph.tsx  background-gradient.tsx  file-upload.tsx  graph-view.tsx  search-panel.tsx  theme-context.tsx  theme-provider.tsx  trie-graph.tsx  upload-page.tsx  workspace.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  label.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  separator.tsx
frontend/src/hooks/: use-theme.ts  use-wasm.ts
frontend/src/lib/: constants.ts  graph.ts  utils.ts
frontend/src/types/: algorithm.d.ts
