[package]
name = "algorithm"
version = "0.1.0"
edition = "2024"

[lib]
name = "algorithm"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
tsify = { version = "0.5.6", features = ["js"] }

[[bin]]
name = "lev-cli"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
